--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Document</title>
+</head>
+<body>
+    <table id="calc"> 
+        <tr> 
+            <td colspan="3"> 
+                <input type="text" id="result"> 
+            </td> 
+            <td><input type="button" value="clear"></td> 
+        </tr> 
+  
+        <tr> 
+            <td><input type="button" class="digit" value="1"></td> 
+            <td><input type="button" class="digit" value="2"></td> 
+            <td><input type="button" class="digit" value="3"></td> 
+            <td><input type="button" value="/"></td> 
+        </tr> 
+        <tr> 
+            <td><input type="button" class="digit" value="4"></td> 
+            <td><input type="button" class="digit" value="5"></td> 
+            <td><input type="button" class="digit" value="6"></td> 
+            <td><input type="button" class="digit" value="*"></td> 
+        </tr> 
+        <tr> 
+            <td><input type="button" class="digit" value="7"></td> 
+            <td><input type="button" class="digit" value="8"></td> 
+            <td><input type="button" class="digit" value="9"></td> 
+            <td><input type="button" value="-"></td> 
+        </tr> 
+        <tr> 
+            <td><input type="button" class="digit" value="0"></td> 
+            <td><input type="button" class="digit" value="."></td> 
+            <td><input type="button" class="digit" value="="></td> 
+            <td><input type="button" class="digit" value="+"></td> 
+        </tr> 
+    </table> 
+    <script src = "scripts.js"></script>
+</body>
 
+</html>
