--- a/index.html
+++ b/index.html
@@ -12,32 +12,32 @@
             <td colspan="3"> 
                 <input type="text" id="result"> 
             </td> 
-            <td><input type="button" value="clear"></td> 
+            <td><input type="button" value="clear" onClick="clr()"></td> 
         </tr> 
   
         <tr> 
             <td><input type="button" class="digit" value="1"></td> 
             <td><input type="button" class="digit" value="2"></td> 
             <td><input type="button" class="digit" value="3"></td> 
-            <td><input type="button" value="/"></td> 
+            <td><input type="button"  class = "operator" value="/"></td> 
         </tr> 
         <tr> 
             <td><input type="button" class="digit" value="4"></td> 
             <td><input type="button" class="digit" value="5"></td> 
             <td><input type="button" class="digit" value="6"></td> 
-            <td><input type="button" class="digit" value="*"></td> 
+            <td><input type="button" class = "operator" value="*"></td> 
         </tr> 
         <tr> 
             <td><input type="button" class="digit" value="7"></td> 
             <td><input type="button" class="digit" value="8"></td> 
             <td><input type="button" class="digit" value="9"></td> 
-            <td><input type="button" value="-"></td> 
+            <td><input type="button" class = "operator" value="-"></td> 
         </tr> 
         <tr> 
             <td><input type="button" class="digit" value="0"></td> 
             <td><input type="button" class="digit" value="."></td> 
-            <td><input type="button" class="digit" value="="></td> 
-            <td><input type="button" class="digit" value="+"></td> 
+            <td><input type="button" class="operator" value="="></td> 
+            <td><input type="button" class = "operator" value="+"></td> 
         </tr> 
     </table> 
     <script src = "scripts.js"></script>
