the calculator works!

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <td><input type="button" class="digit" value="1"></td> 
             <td><input type="button" class="digit" value="2"></td> 
             <td><input type="button" class="digit" value="3"></td> 
-            <td><input type="button"  class = "operator" value="/"></td> 
+            <td><input type="button" class="operator" value="/"></td> 
         </tr> 
         <tr> 
             <td><input type="button" class="digit" value="4"></td> 
@@ -36,7 +36,7 @@
         <tr> 
             <td><input type="button" class="digit" value="0"></td> 
             <td><input type="button" class="digit" value="."></td> 
-            <td><input type="button" class="operator" value="="></td> 
+            <td><input type="button"  id = "equal" value="="></td> 
             <td><input type="button" class = "operator" value="+"></td> 
         </tr> 
     </table> 
